--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
-body{
-  background: lightgray;
+.card{
+  position: relative;
 }
+
+.card img{
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
