--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,16 @@
   z-index: -2;
 }
 
+.card::before{
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-color: 255, 183, 206, 0;
+}
+
+.card:hover{
+  
+}
+
