--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+*{
+  margin: 0px;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  height: 100 vh;
+  align-items: center;
+}
+.container{
+  display: flex;
+  
+}
 .card{
   position: relative;
 }
