--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 *{
   margin: 0px;
   padding: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body{
