--- a/animations.css
+++ b/animations.css
@@ -1,1 +1,7 @@
-
+.animated-icons-container {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  place-items: center;
+}
